--- a/.github/workflows/image-tester.yml
+++ b/.github/workflows/image-tester.yml
@@ -7,6 +7,10 @@ on:
     paths: 
       - images/playwright/**
       - .github/workflows/image-tester.yml
+  pull_request:
+    paths: 
+      - images/playwright/**
+      - .github/workflows/image-tester.yml
 
 permissions:
   contents: read
@@ -14,22 +18,42 @@ permissions:
   packages: write
 
 env:
-  REGISTRY: ghcr.io
-  TESTER_IMAGE_NAME: dyrector-io/dyrectorio/images/playwright
+  GITHUB_REGISTRY: ghcr.io
+  TESTER_IMAGE_NAME: dyrector-io/dyrectorio/playwright
 
 jobs:
-  build_push:
+  build:
     runs-on: ubuntu-22.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16-4
-    defaults:
-      run:
-        working-directory: images/playwright
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Docker build
-        run: docker build -t ${REGISTRY}/${TESTER_IMAGE_NAME}:latest .
+        run: docker build -t ${GITHUB_REGISTRY}/${TESTER_IMAGE_NAME}:latest ./images/playwright
+      - name: Docker save
+        run: docker save ${GITHUB_REGISTRY}/${TESTER_IMAGE_NAME}:latest | gzip -f > tester.zstd
+      - name: artifact upload
+        uses: actions/upload-artifact@v3
+        with:
+          name: tester
+          path: ./tester.zstd
+
+  push:
+    runs-on: ubuntu-22.04
+    needs: build
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16-4
+    if: github.ref_name == 'develop'
+    environment: Workflow - Protected
+    steps:
+      - name: artifact download
+        uses: actions/download-artifact@v3
+        with:
+          name: tester
+          path: artifacts
+      - name: Docker load
+        run: zcat artifacts/tester.zstd | docker load
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
@@ -37,9 +61,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
       - name: Docker push
-        run: docker push ${REGISTRY}/${TESTER_IMAGE_NAME}:latest
+        run: docker push ${GITHUB_REGISTRY}/${TESTER_IMAGE_NAME}:latest
+      - name: Write signing key to disk
+        run: echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
       - name: Sign container image
         run: |
-          cosign sign --key cosign.key ${REGISTRY}/${TESTER_IMAGE_NAME}:latest
+          cosign sign --key cosign.key ${GITHUB_REGISTRY}/${TESTER_IMAGE_NAME}:latest
         env:
           COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
