--- a/images/playwright/Dockerfile
+++ b/images/playwright/Dockerfile
@@ -16,3 +16,5 @@ RUN npm i && \
 WORKDIR /
 
 RUN rm -rf playwright
+
+LABEL org.opencontainers.image.source="https://github.com/dyrector-io/dyrectorio/playwright"
