--- a/web/crux-ui/Dockerfile
+++ b/web/crux-ui/Dockerfile
@@ -35,5 +35,6 @@ USER node
 
 EXPOSE 3000
 ENV PORT 3000
+LABEL org.opencontainers.image.source="https://github.com/dyrector-io/dyrectorio/web/crux-ui"
 
 ENTRYPOINT [ "npm", "run", "prod"]
